@@ -267,7 +267,7 @@ private:
     bool m_pinsScUintBool = false;  // main switch: --pins-sc-uint-bool
     bool m_pinsScBigUint = false;   // main switch: --pins-sc-biguint
     bool m_pinsUint8 = false;       // main switch: --pins-uint8
-    bool m_ppComments = false;      // main switch: --pp-comments
+    bool m_preprocComments = false;  // main switch: --preproc-comments
     bool m_profC = false;           // main switch: --prof-c
     bool m_profCFuncs = false;      // main switch: --prof-cfuncs
     bool m_profExec = false;        // main switch: --prof-exec
@@ -554,7 +554,7 @@ public:
     bool pinsScUintBool() const { return m_pinsScUintBool; }
     bool pinsScBigUint() const VL_MT_SAFE { return m_pinsScBigUint; }
     bool pinsUint8() const { return m_pinsUint8; }
-    bool ppComments() const { return m_ppComments; }
+    bool preprocComments() const { return m_preprocComments; }
     bool profC() const { return m_profC; }
     bool profCFuncs() const { return m_profCFuncs; }
     bool profExec() const { return m_profExec; }
